--- a/JavaMon/.classpath
+++ b/JavaMon/.classpath
@@ -6,7 +6,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/joshu/Downloads/sqlite-jdbc-3.51.0.0.jar">
+	<classpathentry kind="lib" path="lib/sqlite-jdbc-3.51.0.0.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
